--- a/templates/room/index.html
+++ b/templates/room/index.html
@@ -16,13 +16,13 @@ Join | Create Meet
             <div class="form-group row mt-2">
                 <label class="col-form-label col-sm-2" for="Name_input">Name</label>
                 <div class="col-sm-10">
-                    <input class="form-control" name="username" id="Name_input" type="text" placeholder="John..." required>
+                    <input class="form-control" name="username" id="Name_input" type="text" placeholder="Enter your name..." required>
                 </div>
             </div>
             <div class="form-group row mt-2">
                 <label class="col-form-label col-sm-2" for="Room_input">Room Id</label>
                 <div class="col-sm-10">
-                    <input class="form-control" name="roomid" id="Room_input" type="text" placeholder="123-abc..." required>
+                    <input class="form-control" name="roomid" id="Room_input" type="text" placeholder="Enter your room id..." required>
                 </div>
             </div>
             <div id="submit_btn_rm" class="form-group row my-4">
