--- a/templates/video_mesh/channels_index.html
+++ b/templates/video_mesh/channels_index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <!-- <script async onload="openCvReady()" src="{% static 'video_mesh/js/opencv.js' %}"></script> -->
     <script async src="https://docs.opencv.org/3.4/opencv.js"></script>
+    <script src="{% static 'analytics/js/Script.js' %}"></script>
     <link rel='stylesheet' type='text/css' media='screen' href="{% static 'video_mesh/css/webrtc_mesh.css' %}">
     <link rel='stylesheet' type='text/css' media='screen' href="{% static 'video_mesh/css/header.css' %}">
     <link rel='stylesheet' type='text/css' media='screen' href="{% static 'video_mesh/css/controls.css' %}">
