Real time users div added

--- a/templates/analytics/navbar.html
+++ b/templates/analytics/navbar.html
@@ -3,7 +3,7 @@
     <nav>
         <div id="nav_logo">
             <img src="{% static 'icons/favicon.png' %}" alt="logo">
-            <h3>Nvs Meet Analytics</h3>
+            <h3>Nvs Meet</h3>
         </div>
         <div id="nav_links">
             <a href="#"><p>Login</p></a>
