--- a/static/analytics/css/main_index.css
+++ b/static/analytics/css/main_index.css
@@ -8,36 +8,42 @@ body {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     text-align: center;
-    background-color: #2d2d2d;
-    color: #f5f5f5;
+    background-color: #ffffff;
+    color: #000000;
     /* background-color: #f5f5f5; */
 }
 #main_content{
     margin-top: 66px !important;
 }
 #map {
-    height: 400px;
+    min-height: 400px;
+    height: 100%;
+    border-radius: 4px;
+    margin-bottom: 5px;
 }
 #nvs-card-main{
     display: flex;
+    flex-direction: column;
+    gap: 3px;
     align-items: center;
     justify-content: center;
     align-content: center;
 }
 .nvs-card{
-    background-color: #f5f5f5;
+    background-color: #fff;
     display: flex;
     border: 1px solid rgb(0, 0, 0,0.6);
-    -webkit-box-shadow: 3px 3px 15px -1px rgba(0,0,0,0.77);
-    box-shadow: 3px 3px 15px -1px rgba(0,0,0,0.77);
+    -webkit-box-shadow: 3px 3px 15px -1px #dadce0;;
+    box-shadow: 1px 3px 15px -1px #dadce0;;
     border-radius: 5px;
     align-items: center;
     justify-content: center;
-    max-height: 500px;
+    min-height: 200px;
+    max-height: 300px;
     width: 100%;
 }
 #main_cd{
-    border: 1px solid rgba(255, 255, 255, 0.6);
+    border: 1px solid rgba(0, 0, 0, 0.6);
     border-radius: 5px;
     margin: 3px;
     margin-bottom: 8px;
@@ -46,7 +52,57 @@ body {
     display: flex;
     align-items: center;
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    justify-content: flex-start;
-    border-bottom: 1px solid rgba(255, 255, 255, 0.6);
+    justify-content: space-between;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.6);
     margin-bottom: 5px;
+}
+.Main_Heading{
+    display: flex;
+    align-items: center;
+    font-family:Arial, Helvetica, sans-serif;
+    justify-content: flex-start;
+    margin-bottom: 5px;
+    margin-left: 10px;
+}
+#my_dataviz{
+    display: flex;
+}
+.real_time{
+    width: 100%;
+    margin: 5px;
+}
+.real_time_up_dt{
+    border: 1px solid rgba(108, 108, 108, 0.6);
+    border-radius: 4px;
+    margin: 1px;
+}
+.real_time_num > span{
+    font-size: 25px;
+    font-weight: 500;
+    color:#2b86d1;
+}
+#user_part_cont > li {
+    background-color: transparent;
+    color: #252525;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding:1px 20px;
+}
+.r_t_head{
+    color: rgb(67, 67, 67);
+    font-weight: 600;
+}
+.r_t_head_cn{
+    color: rgb(67, 67, 67);
+    font-weight: 600;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-left: 1px;
+}
+.r_t_head_cn > span:last-child{
+    color: #000000;
+    font-size: 15px;
+    font-weight: 550;
 }
