real time div bugs fixed and admin ehananced

--- a/static/analytics/css/main_index.css
+++ b/static/analytics/css/main_index.css
@@ -14,6 +14,7 @@ body {
 }
 #main_content{
     margin-top: 66px !important;
+    margin-bottom: 40px !important;
 }
 #map {
     min-height: 400px;
