--- a/templates/analytics/navbar.html
+++ b/templates/analytics/navbar.html
@@ -5,9 +5,9 @@
             <img src="{% static 'icons/favicon.png' %}" alt="logo">
             <h3>Nvs Meet</h3>
         </div>
-        <div id="nav_links">
+        {% comment %} <div id="nav_links">
             <a href="#"><p>Login</p></a>
             <a id="signup_link" href="#"><p>Sign Up</p></a>
-        </div>
+        </div> {% endcomment %}
     </nav>
 </header>
