--- a/templates/video_mesh/channels_index.html
+++ b/templates/video_mesh/channels_index.html
@@ -39,7 +39,7 @@
                                 <video class="video-player" id="local_stream" autoplay muted playsinline></video>
                             </div>
                         </div>
-                        <button id="convertGray">Convert gray</button>
+<!--                         <button id="convertGray">Convert gray</button> -->
                     </div>
                 </div>
                 <div class="col main_vidot_div">
